addition of font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="src/styles.css" />
+    <script
+    src="https://kit.fontawesome.com/1d01eeebd0.js"
+    crossorigin="anonymous"
+  ></script>
     <title>React App</title>
   </head>
   <body>
