--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mukta&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css" />
     <script
     src="https://kit.fontawesome.com/1d01eeebd0.js"
